java-playground/src/main/java/com/jayxu/playground/antlr/minijava/MiniJavaParser.java
package com.jayxu.playground.antlr.minijava;
// Generated from by ANTLR 4.10.1

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class MiniJavaParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5,
            T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14,
            T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22,
            T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29,
            T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, Identifier = 36,
            NUMBER = 37, WS = 38;
    public static final int RULE_program = 0, RULE_mainClass = 1,
            RULE_classDeclaration = 2, RULE_varDeclaration = 3,
            RULE_type = 4, RULE_methodDeclaration = 5, RULE_statement = 6,
            RULE_expression = 7;

    private static String[] makeRuleNames() {
        return new String[] {
            "program", "mainClass", "classDeclaration", "varDeclaration",
            "type",
            "methodDeclaration", "statement", "expression"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null, "'public'", "'class'", "'{'", "'static'", "'void'", "'main'",
            "'('",
            "'String'", "'['", "']'", "')'", "'}'", "'extends'", "';'", "'int'",
            "'boolean'", "','", "'return'", "'if'", "'else'", "'while'",
            "'System.out.println'",
            "'='", "'&&'", "'<'", "'+'", "'-'", "'*'", "'.'", "'length'",
            "'new'",
            "'!'", "'true'", "'false'", "'this'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null, null, null, null, null, null, null, null, null, null, null,
            null,
            null, null, null, null, null, null, null, null, null, null, null,
            null,
            null, null, null, null, null, null, null, null, null, null, null,
            null,
            "Identifier", "NUMBER", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(
        _LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (var i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "MiniJava.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public MiniJavaParser(TokenStream input) {
        super(input);
        this._interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
            _sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public MainClassContext mainClass() {
            return this.getRuleContext(MainClassContext.class, 0);
        }

        public List<ClassDeclarationContext> classDeclaration() {
            return this.getRuleContexts(ClassDeclarationContext.class);
        }

        public ClassDeclarationContext classDeclaration(int i) {
            return this.getRuleContext(ClassDeclarationContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterProgram(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitProgram(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitProgram(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        var _localctx = new ProgramContext(this._ctx, this.getState());
        this.enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.setState(16);
                this.mainClass();
                this.setState(20);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la == T__0 || _la == T__1) {
                    {
                        {
                            this.setState(17);
                            this.classDeclaration();
                        }
                    }
                    this.setState(22);
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class MainClassContext extends ParserRuleContext {
        public List<TerminalNode> Identifier() {
            return this.getTokens(MiniJavaParser.Identifier);
        }

        public TerminalNode Identifier(int i) {
            return this.getToken(MiniJavaParser.Identifier, i);
        }

        public StatementContext statement() {
            return this.getRuleContext(StatementContext.class, 0);
        }

        public MainClassContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_mainClass;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterMainClass(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitMainClass(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitMainClass(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final MainClassContext mainClass() throws RecognitionException {
        var _localctx = new MainClassContext(this._ctx, this.getState());
        this.enterRule(_localctx, 2, RULE_mainClass);
        int _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.setState(24);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la == T__0) {
                    {
                        this.setState(23);
                        this.match(T__0);
                    }
                }

                this.setState(26);
                this.match(T__1);
                this.setState(27);
                this.match(Identifier);
                this.setState(28);
                this.match(T__2);
                this.setState(29);
                this.match(T__0);
                this.setState(30);
                this.match(T__3);
                this.setState(31);
                this.match(T__4);
                this.setState(32);
                this.match(T__5);
                this.setState(33);
                this.match(T__6);
                this.setState(34);
                this.match(T__7);
                this.setState(35);
                this.match(T__8);
                this.setState(36);
                this.match(T__9);
                this.setState(37);
                this.match(Identifier);
                this.setState(38);
                this.match(T__10);
                this.setState(39);
                this.match(T__2);
                this.setState(40);
                this.statement();
                this.setState(41);
                this.match(T__11);
                this.setState(42);
                this.match(T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class ClassDeclarationContext extends ParserRuleContext {
        public List<TerminalNode> Identifier() {
            return this.getTokens(MiniJavaParser.Identifier);
        }

        public TerminalNode Identifier(int i) {
            return this.getToken(MiniJavaParser.Identifier, i);
        }

        public List<VarDeclarationContext> varDeclaration() {
            return this.getRuleContexts(VarDeclarationContext.class);
        }

        public VarDeclarationContext varDeclaration(int i) {
            return this.getRuleContext(VarDeclarationContext.class, i);
        }

        public List<MethodDeclarationContext> methodDeclaration() {
            return this.getRuleContexts(MethodDeclarationContext.class);
        }

        public MethodDeclarationContext methodDeclaration(int i) {
            return this.getRuleContext(MethodDeclarationContext.class, i);
        }

        public ClassDeclarationContext(ParserRuleContext parent,
                int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterClassDeclaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitClassDeclaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitClassDeclaration(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final ClassDeclarationContext classDeclaration()
            throws RecognitionException {
        var _localctx = new ClassDeclarationContext(this._ctx, this.getState());
        this.enterRule(_localctx, 4, RULE_classDeclaration);
        int _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.setState(45);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la == T__0) {
                    {
                        this.setState(44);
                        this.match(T__0);
                    }
                }

                this.setState(47);
                this.match(T__1);
                this.setState(48);
                this.match(Identifier);
                this.setState(51);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la == T__12) {
                    {
                        this.setState(49);
                        this.match(T__12);
                        this.setState(50);
                        this.match(Identifier);
                    }
                }

                this.setState(53);
                this.match(T__2);
                this.setState(57);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((_la & ~0x3f) == 0 && (1L << _la
                    & (1L << T__14 | 1L << T__15 | 1L << Identifier)) != 0) {
                    {
                        {
                            this.setState(54);
                            this.varDeclaration();
                        }
                    }
                    this.setState(59);
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.setState(63);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            this.setState(60);
                            this.methodDeclaration();
                        }
                    }
                    this.setState(65);
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.setState(66);
                this.match(T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class VarDeclarationContext extends ParserRuleContext {
        public TypeContext type() {
            return this.getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode Identifier() {
            return this.getToken(MiniJavaParser.Identifier, 0);
        }

        public VarDeclarationContext(ParserRuleContext parent,
                int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_varDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterVarDeclaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitVarDeclaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitVarDeclaration(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final VarDeclarationContext varDeclaration()
            throws RecognitionException {
        var _localctx = new VarDeclarationContext(this._ctx, this.getState());
        this.enterRule(_localctx, 6, RULE_varDeclaration);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.setState(68);
                this.type();
                this.setState(69);
                this.match(Identifier);
                this.setState(70);
                this.match(T__13);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TerminalNode Identifier() {
            return this.getToken(MiniJavaParser.Identifier, 0);
        }

        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterType(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitType(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor).visitType(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        var _localctx = new TypeContext(this._ctx, this.getState());
        this.enterRule(_localctx, 8, RULE_type);
        try {
            this.setState(78);
            this._errHandler.sync(this);
            switch (this.getInterpreter().adaptivePredict(this._input, 6,
                this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1); {
                    this.setState(72);
                    this.match(T__14);
                    this.setState(73);
                    this.match(T__8);
                    this.setState(74);
                    this.match(T__9);
                }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2); {
                    this.setState(75);
                    this.match(T__15);
                }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3); {
                    this.setState(76);
                    this.match(T__14);
                }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4); {
                    this.setState(77);
                    this.match(Identifier);
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class MethodDeclarationContext extends ParserRuleContext {
        public List<TypeContext> type() {
            return this.getRuleContexts(TypeContext.class);
        }

        public TypeContext type(int i) {
            return this.getRuleContext(TypeContext.class, i);
        }

        public List<TerminalNode> Identifier() {
            return this.getTokens(MiniJavaParser.Identifier);
        }

        public TerminalNode Identifier(int i) {
            return this.getToken(MiniJavaParser.Identifier, i);
        }

        public ExpressionContext expression() {
            return this.getRuleContext(ExpressionContext.class, 0);
        }

        public List<VarDeclarationContext> varDeclaration() {
            return this.getRuleContexts(VarDeclarationContext.class);
        }

        public VarDeclarationContext varDeclaration(int i) {
            return this.getRuleContext(VarDeclarationContext.class, i);
        }

        public List<StatementContext> statement() {
            return this.getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return this.getRuleContext(StatementContext.class, i);
        }

        public MethodDeclarationContext(ParserRuleContext parent,
                int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_methodDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterMethodDeclaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitMethodDeclaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitMethodDeclaration(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final MethodDeclarationContext methodDeclaration()
            throws RecognitionException {
        var _localctx = new MethodDeclarationContext(this._ctx,
            this.getState());
        this.enterRule(_localctx, 10, RULE_methodDeclaration);
        int _la;
        try {
            int _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.setState(80);
                this.match(T__0);
                this.setState(81);
                this.type();
                this.setState(82);
                this.match(Identifier);
                this.setState(83);
                this.match(T__6);
                this.setState(95);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((_la & ~0x3f) == 0 && (1L << _la
                    & (1L << T__14 | 1L << T__15 | 1L << Identifier)) != 0) {
                    {
                        this.setState(84);
                        this.type();
                        this.setState(85);
                        this.match(Identifier);
                        this.setState(92);
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la == T__16) {
                            {
                                {
                                    this.setState(86);
                                    this.match(T__16);
                                    this.setState(87);
                                    this.type();
                                    this.setState(88);
                                    this.match(Identifier);
                                }
                            }
                            this.setState(94);
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }

                this.setState(97);
                this.match(T__10);
                this.setState(98);
                this.match(T__2);
                this.setState(102);
                this._errHandler.sync(this);
                _alt = this.getInterpreter().adaptivePredict(this._input, 9,
                    this._ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                this.setState(99);
                                this.varDeclaration();
                            }
                        }
                    }
                    this.setState(104);
                    this._errHandler.sync(this);
                    _alt = this.getInterpreter().adaptivePredict(this._input, 9,
                        this._ctx);
                }
                this.setState(108);
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((_la & ~0x3f) == 0
                    && (1L << _la & (1L << T__2 | 1L << T__18 | 1L << T__20
                        | 1L << T__21 | 1L << Identifier)) != 0) {
                    {
                        {
                            this.setState(105);
                            this.statement();
                        }
                    }
                    this.setState(110);
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.setState(111);
                this.match(T__17);
                this.setState(112);
                this.expression(0);
                this.setState(113);
                this.match(T__13);
                this.setState(114);
                this.match(T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return this.getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return this.getRuleContext(StatementContext.class, i);
        }

        public List<ExpressionContext> expression() {
            return this.getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return this.getRuleContext(ExpressionContext.class, i);
        }

        public TerminalNode Identifier() {
            return this.getToken(MiniJavaParser.Identifier, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterStatement(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitStatement(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitStatement(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        var _localctx = new StatementContext(this._ctx, this.getState());
        this.enterRule(_localctx, 12, RULE_statement);
        int _la;
        try {
            this.setState(158);
            this._errHandler.sync(this);
            switch (this.getInterpreter().adaptivePredict(this._input, 13,
                this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1); {
                    this.setState(116);
                    this.match(T__2);
                    this.setState(120);
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    while ((_la & ~0x3f) == 0
                        && (1L << _la & (1L << T__2 | 1L << T__18 | 1L << T__20
                            | 1L << T__21 | 1L << Identifier)) != 0) {
                        {
                            {
                                this.setState(117);
                                this.statement();
                            }
                        }
                        this.setState(122);
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    }
                    this.setState(123);
                    this.match(T__11);
                }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2); {
                    this.setState(124);
                    this.match(T__18);
                    this.setState(125);
                    this.match(T__6);
                    this.setState(126);
                    this.expression(0);
                    this.setState(127);
                    this.match(T__10);
                    this.setState(128);
                    this.statement();
                    this.setState(129);
                    this.match(T__19);
                    this.setState(130);
                    this.statement();
                }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3); {
                    this.setState(132);
                    this.match(T__20);
                    this.setState(133);
                    this.match(T__6);
                    this.setState(134);
                    this.expression(0);
                    this.setState(135);
                    this.match(T__10);
                    this.setState(136);
                    this.statement();
                }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4); {
                    this.setState(138);
                    this.match(T__21);
                    this.setState(139);
                    this.match(T__6);
                    this.setState(141);
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if ((_la & ~0x3f) == 0
                        && (1L << _la & (1L << T__6 | 1L << T__30 | 1L << T__31
                            | 1L << T__32 | 1L << T__33 | 1L << T__34
                            | 1L << Identifier | 1L << NUMBER)) != 0) {
                        {
                            this.setState(140);
                            this.expression(0);
                        }
                    }

                    this.setState(143);
                    this.match(T__10);
                    this.setState(144);
                    this.match(T__13);
                }
                    break;
                case 5:
                    this.enterOuterAlt(_localctx, 5); {
                    this.setState(145);
                    this.match(Identifier);
                    this.setState(146);
                    this.match(T__22);
                    this.setState(147);
                    this.expression(0);
                    this.setState(148);
                    this.match(T__13);
                }
                    break;
                case 6:
                    this.enterOuterAlt(_localctx, 6); {
                    this.setState(150);
                    this.match(Identifier);
                    this.setState(151);
                    this.match(T__8);
                    this.setState(152);
                    this.expression(0);
                    this.setState(153);
                    this.match(T__9);
                    this.setState(154);
                    this.match(T__22);
                    this.setState(155);
                    this.expression(0);
                    this.setState(156);
                    this.match(T__13);
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            this._errHandler.reportError(this, re);
            this._errHandler.recover(this, re);
        } finally {
            this.exitRule();
        }
        return _localctx;
    }

    public static class ExpressionContext extends ParserRuleContext {
        public List<ExpressionContext> expression() {
            return this.getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return this.getRuleContext(ExpressionContext.class, i);
        }

        public TerminalNode Identifier() {
            return this.getToken(MiniJavaParser.Identifier, 0);
        }

        public TerminalNode NUMBER() {
            return this.getToken(MiniJavaParser.NUMBER, 0);
        }

        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).enterExpression(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MiniJavaListener) {
                ((MiniJavaListener) listener).exitExpression(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MiniJavaVisitor) {
                return ((MiniJavaVisitor<? extends T>) visitor)
                    .visitExpression(this);
            }
            return visitor.visitChildren(this);
        }
    }

    public final ExpressionContext expression() throws RecognitionException {
        return this.expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        var _parentctx = this._ctx;
        var _parentState = this.getState();
        var _localctx = new ExpressionContext(this._ctx, _parentState);
        var _prevctx = _localctx;
        var _startState = 14;
        this.enterRecursionRule(_localctx, 14, RULE_expression, _p);
        int _la;
        try {
            int _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.setState(182);
                this._errHandler.sync(this);
                switch (this.getInterpreter().adaptivePredict(this._input, 14,
                    this._ctx)) {
                    case 1: {
                        this.setState(161);
                        this.match(T__30);
                        this.setState(162);
                        this.match(T__14);
                        this.setState(163);
                        this.match(T__8);
                        this.setState(164);
                        this.expression(0);
                        this.setState(165);
                        this.match(T__9);
                    }
                        break;
                    case 2: {
                        this.setState(167);
                        this.match(T__30);
                        this.setState(168);
                        this.match(Identifier);
                        this.setState(169);
                        this.match(T__6);
                        this.setState(170);
                        this.match(T__10);
                    }
                        break;
                    case 3: {
                        this.setState(171);
                        this.match(T__31);
                        this.setState(172);
                        this.expression(7);
                    }
                        break;
                    case 4: {
                        this.setState(173);
                        this.match(T__6);
                        this.setState(174);
                        this.expression(0);
                        this.setState(175);
                        this.match(T__10);
                    }
                        break;
                    case 5: {
                        this.setState(177);
                        this.match(NUMBER);
                    }
                        break;
                    case 6: {
                        this.setState(178);
                        this.match(T__32);
                    }
                        break;
                    case 7: {
                        this.setState(179);
                        this.match(T__33);
                    }
                        break;
                    case 8: {
                        this.setState(180);
                        this.match(Identifier);
                    }
                        break;
                    case 9: {
                        this.setState(181);
                        this.match(T__34);
                    }
                        break;
                }
                this._ctx.stop = this._input.LT(-1);
                this.setState(212);
                this._errHandler.sync(this);
                _alt = this.getInterpreter().adaptivePredict(this._input, 18,
                    this._ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (this._parseListeners != null) {
                            this.triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            this.setState(210);
                            this._errHandler.sync(this);
                            switch (this.getInterpreter()
                                .adaptivePredict(this._input, 17, this._ctx)) {
                                case 1: {
                                    _localctx = new ExpressionContext(
                                        _parentctx, _parentState);
                                    this.pushNewRecursionContext(_localctx,
                                        _startState, RULE_expression);
                                    this.setState(184);
                                    if (!this.precpred(this._ctx, 13)) {
                                        throw new FailedPredicateException(this,
                                            "precpred(_ctx, 13)");
                                    }
                                    this.setState(185);
                                    _la = this._input.LA(1);
                                    if ((_la & ~0x3f) != 0 || (1L << _la
                                        & (1L << T__23 | 1L << T__24
                                            | 1L << T__25 | 1L << T__26
                                            | 1L << T__27)) == 0) {
                                        this._errHandler.recoverInline(this);
                                    } else {
                                        if (this._input.LA(1) == Token.EOF) {
                                            this.matchedEOF = true;
                                        }
                                        this._errHandler.reportMatch(this);
                                        this.consume();
                                    }
                                    this.setState(186);
                                    this.expression(14);
                                }
                                    break;
                                case 2: {
                                    _localctx = new ExpressionContext(
                                        _parentctx, _parentState);
                                    this.pushNewRecursionContext(_localctx,
                                        _startState, RULE_expression);
                                    this.setState(187);
                                    if (!this.precpred(this._ctx, 12)) {
                                        throw new FailedPredicateException(this,
                                            "precpred(_ctx, 12)");
                                    }
                                    this.setState(188);
                                    this.match(T__8);
                                    this.setState(189);
                                    this.expression(0);
                                    this.setState(190);
                                    this.match(T__9);
                                }
                                    break;
                                case 3: {
                                    _localctx = new ExpressionContext(
                                        _parentctx, _parentState);
                                    this.pushNewRecursionContext(_localctx,
                                        _startState, RULE_expression);
                                    this.setState(192);
                                    if (!this.precpred(this._ctx, 11)) {
                                        throw new FailedPredicateException(this,
                                            "precpred(_ctx, 11)");
                                    }
                                    this.setState(193);
                                    this.match(T__28);
                                    this.setState(194);
                                    this.match(T__29);
                                }
                                    break;
                                case 4: {
                                    _localctx = new ExpressionContext(
                                        _parentctx, _parentState);
                                    this.pushNewRecursionContext(_localctx,
                                        _startState, RULE_expression);
                                    this.setState(195);
                                    if (!this.precpred(this._ctx, 10)) {
                                        throw new FailedPredicateException(this,
                                            "precpred(_ctx, 10)");
                                    }
                                    this.setState(196);
                                    this.match(T__28);
                                    this.setState(197);
                                    this.match(Identifier);
                                    this.setState(198);
                                    this.match(T__6);
                                    this.setState(207);
                                    this._errHandler.sync(this);
                                    _la = this._input.LA(1);
                                    if ((_la & ~0x3f) == 0
                                        && (1L << _la & (1L << T__6
                                            | 1L << T__30 | 1L << T__31
                                            | 1L << T__32 | 1L << T__33
                                            | 1L << T__34 | 1L << Identifier
                                            | 1L << NUMBER)) != 0) {
                                        {
                                            this.setState(199);
                                            this.expression(0);
                                            this.setState(204);
